Corrections balises sémantiques + contrastes

--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ a:hover {
 .texture-paper::before {
     background: url("img/texture-paper.png");
     background-size: 280px 280px;
+    background-color: rgba(0, 0, 0, .7);
+    pointer-events: none;
 }
 
 .b-parallax {
@@ -677,7 +679,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 16px;
 }
 
 .tight-width-whitespace {
@@ -824,6 +826,18 @@ h4 {
 .bg-presentation {
     background-image: url("img/image-de-presentation.bmp");
 }
+
+/* MY CODE */
+
+ul li {
+    list-style-type: none;
+}
+
+.z-10 {
+    position: relative;
+    z-index: 10;
+}
+
 
 @media (max-width: 1024px) {
     .bloc {
